<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
   android:background="@drawable/bottomsheet_bg">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:text="@string/feedbackTitle"
        android:textSize="@dimen/_10sdp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:id="@+id/tagRecyler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagRecyler"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/TitleContainer"
        android:layout_width="match_parent"
        android:background="@drawable/description_bg"
        android:layout_height="@dimen/_30sdp">
        <EditText
            android:maxLength="100"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/_5sdp"
            android:id="@+id/Edtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/black"
            android:background="@null"
            android:lines="1"
            android:hint="@string/title"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/DescriptionContainer"
        android:layout_width="match_parent"
        android:background="@drawable/description_bg"
        android:layout_height="@dimen/_250sdp">
    <EditText

        android:maxLength="300"
        android:paddingTop="@dimen/_5sdp"
        android:hint="@string/start_here"
        android:paddingStart="@dimen/_5sdp"
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/black"
        android:background="@null"/>

        <RelativeLayout
            android:visibility="visible"
            android:id="@+id/addImageContainer"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/description_bg"
            android:backgroundTint="@color/grey">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_add_image" />

        </RelativeLayout>
        
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/SelectedImageContainer"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/description_bg">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/SelectedImage"
                android:layout_width="@dimen/_43sdp"
                android:layout_height="@dimen/_43sdp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                />

            <ImageView
                android:id="@+id/BtnClose"
                android:layout_alignParentEnd="true"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_close"/>

        </RelativeLayout>
        
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionContainer"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/BtnSubmit"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/roboto_bold"
        android:background="@drawable/btn_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>